[package]
name = "skyfeed"
version = "0.4.0"
edition = "2021"
description = "A library for quickly building BlueSky feed generators."
repository = "https://github.com/cyypherus/skyfeed"
license = "MIT"
keywords = ["feed", "generator", "bluesky"]
authors = ["cyypherus"]

[lib]

[features]
test-api = []

[[bin]]
name = "my_did"

[[bin]]
name = "publish"

[[bin]]
name = "unpublish"

[[bin]]
name = "verify"

[[example]]
name = "basic"
path = "examples/basic/src/main.rs"

[[example]]
name = "sqlite"
path = "examples/sqlite/src/main.rs"

[dependencies]
atrium-api = "0.24.8"
dotenv = "0.15.0"
env_logger = "0.11.5"
jetstream-oxide = "0.1.1"
log = "0.4.22"
serde = "1.0.215"
serde_json = "1.0.133"
tokio = { version = "1.41.1", features = ["full"] }
warp = "0.3.7"

anyhow = "1.0.81"
clap = { version = "4.5.3", features = ["derive"] }
reqwest = "0.12.9"
atrium-xrpc-client = "0.5.10"
chrono = "0.4.39"

[dev-dependencies]
insta = "1.42.1"
public-api = "0.43.0"
rustdoc-json = "0.9.4"
rustup-toolchain = "0.1.9"

rusqlite = { version = "0.33.0", features = ["bundled"] }
regex = "1.11.1"
